--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,20 @@
     <string name="onboarding_learning_title">Learning</string>
     <string name="onboarding_examination_title">Examination</string>
     <string name="onboarding_common_description">Our new service makes it easy for you to work anywhere, there are new features will ready help you.</string>
+
+    <string name="sign_in_title">Let’s Sign In</string>
+    <string name="sign_up_title">Let’s Sign Up</string>
+    <string name="welcome_back_title">Welcome\nBack!</string>
+    <string name="create_account_title">Create\nAccount!</string>
+    <string name="placeholder_name">Name</string>
+    <string name="placeholder_email">Email</string>
+    <string name="placeholder_password">Password</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="dont_have_an_account">Don’t have an account?&#160;</string>
+    <string name="already_have_an_account">Already have an account?&#160;</string>
+    <string name="or_continue_with">or continue with</string>
+    <string name="google">Google</string>
+    <string name="apple">Apple</string>
 </resources>
