UNT-T13894: Migrated from material to material3 and applied proper theme to application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="number_of_quiz">%1$d Quiz</string>
     <string name="choice_your_courses">Choice your courses</string>
     <string name="number_of_enrolls">%1$d+ Enrolled</string>
+    <string name="authentication_logo_description">APP BY KAWSAR AHMED</string>
 </resources>
